Disable HW AES support by default

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ option(WITH_AEON            "CryptoNight-Lite support" ON)
 option(WITH_SUMO            "CryptoNight-Heavy support" ON)
 option(WITH_CN_PICO         "CryptoNight-Pico support" ON)
 option(WITH_CN_GPU          "CryptoNight-GPU support" ON)
+option(WITH_HW_AES          "CPU supports AES instructions set" OFF)
 
 include_directories(${CMAKE_SOURCE_DIR}/src/MultiHashing/xmrig)
 include_directories(${CMAKE_SOURCE_DIR}/src/MultiHashing/xmrig/3rdparty)
@@ -127,7 +128,7 @@ if (CMAKE_CXX_COMPILER_ID MATCHES GNU)
     elseif (XMRIG_ARMv7)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpu=neon")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon -flax-vector-conversions")
-    else()
+    elseif (WITH_HW_AES)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -maes")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -maes")
     endif()
@@ -168,7 +169,7 @@ elseif (CMAKE_CXX_COMPILER_ID MATCHES Clang)
     elseif (XMRIG_ARMv7)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpu=neon -march=${CMAKE_SYSTEM_PROCESSOR}")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon -march=${CMAKE_SYSTEM_PROCESSOR}")
-    else()
+    elseif (WITH_HW_AES)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -maes")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -maes")
     endif()
