--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_SKIP_PACKAGE_ALL_DEPENDENCY ON)
 set(CMAKE_SUPPRESS_REGENERATION ON)
 set(STATIC ON CACHE BOOL "Link libraries statically")
 set(BUILD_TESTS OFF CACHE BOOL "build tests")
+set(PORTABLE ON)
 
 if(BUILD_TESTS)
     enable_testing()
@@ -162,6 +163,7 @@ if (NOT COMMIT_ID_IN_VERSION)
     set(COMMIT_ID "unknown")
     message(STATUS "Version : ${VERSION}")
     message(STATUS "Revision : ${COMMIT_ID}")
+    message(STATUS "Arch : ${ARCH}")
     configure_file("${CMAKE_CURRENT_SOURCE_DIR}/src/version.h.in" "${CMAKE_CURRENT_BINARY_DIR}/version/version.h")
     add_custom_target(version ALL)
 elseif(DEFINED COMMIT_ID_IN_VERSION)
@@ -193,6 +195,7 @@ elseif(DEFINED COMMIT_ID_IN_VERSION)
     message(STATUS "Branch : ${GIT_BRANCH}")
     message(STATUS "Version : ${VERSION}")
     message(STATUS "Revision : ${COMMIT_ID}")
+    message(STATUS "Arch : ${ARCH}")
     message(STATUS "Boost version : ${Boost_LIB_VERSION}")
     message(STATUS "Link libraries statically : ${STATIC}" )
     message(STATUS "Portable : ${PORTABLE}" )
